Cleanup maven version plugin